# py-coupler

./: CLAUDE.md  Makefile  README.md  clean_diagram.mmd  clean_viewer.html  generate_filtered_mermaid.py  generate_grouped_mermaid.py  generate_html_report.py  generate_interactive_html.py  grouped_diagram.mmd  grouped_viewer.html  main.py  mermaid_viewer.html  project_viewer.html  pyproject.toml  repo_analysis.html  spaced_viewer.html
docs/: project_definition.md
examples/: example.mmd  imports_example.json
pymoduleanalyzer/: __init__.py
pymoduleanalyzer/analyzer/: __init__.py  ast_parser.py  import_analyzer.py  method_analyzer.py  module_discovery.py
pymoduleanalyzer/cli/: __init__.py  commands.py  main.py
pymoduleanalyzer/linter/: __init__.py  precommit.py  rules.py  suggestions.py
pymoduleanalyzer/metrics/: __init__.py  complexity.py  coupling.py  encapsulation.py
pymoduleanalyzer/utils/: __init__.py  config.py  file_utils.py
pymoduleanalyzer/visualization/: __init__.py  graph_generator.py  report_builder.py
tests/: dependencies.dot  repository_analysis.json  repository_analysis.txt
