[project]
name = "pymoduleanalyzer"
version = "0.1.0"
description = "Python Repository Structure Analysis Tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9",
    "graphviz>=0.20",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.scripts]
pymoduleanalyzer = "pymoduleanalyzer.cli.main:app"
